--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>BYREDO</h1>
         <main>
             <article>
-                <img src="img/BTREDO/pic0.png" alt="">
+                <img src="img/index/pic0.jpg" alt="">
             </article>
         </main>
     </a>
