--- a/community.html
+++ b/community.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <script defer src="../js/community.js"></script>
-    <script defer src="../js/anime.js"></script>
+    <script defer src="js/community.js"></script>
+    <script defer src="js/anime.js"></script>
     <script src="https://kit.fontawesome.com/8cb4d71d7e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
@@ -41,10 +41,10 @@
     <main>
         <section class="content">
             <div class="inner">
-                <h1>FAQ</h1>
+                <h1>COMMUNITY</h1>
                 <!-- FAQ 사진영역 -->
                 <div class="faq-pic">
-                    <img src="../img/story1.jpeg" alt="">
+                    <img src="img/member/community1.jpeg" alt="">
                     <i class="fa-solid far fa-question-circle"></i>
                     <p>If you have any other questions, please use this 1:1 consultation.
                     </p>
