--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <a href="/page/main.html">
+    <a href="main.html">
             <h1>BYREDO</h1>
         <main>
             <article>
