--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <script src="../js/main.js"></script>
-    <script src="../js/anime.js"></script>
+    <script src=""></script>
+    <script src="js/anime.js"></script>
     <script src="https://kit.fontawesome.com/8cb4d71d7e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
@@ -33,7 +33,7 @@
                 </ul>
                 <ul class="util">
                     <li><a href="#">Login</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="join.html">Join</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">English/한</a></li>
                 </ul>
@@ -43,7 +43,7 @@
     </header>
     <!-- 미디어 -->
     <figure id="visure">
-        <video src="../img/BYREDO.mp4" muted autoplay loop></video>
+        <video src="img/BYREDO.mp4" muted autoplay loop></video>
     </figure>
 
     <!-- 베스트셀러 -->
@@ -54,7 +54,7 @@
                 <!-- 첫번째 베스트셀러 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/mob_1996_edp-50_b.webp" alt="">
+                        <img src="img/mob_1996_edp-50_b.webp" alt="">
                     </div>
                     <div class="text">
                         <p>1996 was inspired by Kirsten 1996, a picture of a young girl taken by iconic photographers
@@ -75,7 +75,7 @@
                 <!-- 두번째 베스트셀러 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/mob_accordoud_edp-50_b.webp" alt="">
+                        <img src="img/mob_accordoud_edp-50_b.webp" alt="">
                     </div>
                     <div class="text">
                         <p>Oud Immortel and Accord Oud are both created around oud, a type of exotic wood used in
@@ -93,7 +93,7 @@
                 <!-- 세번째 베스트셀러 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/mob_ronml_edp-50_d.jpeg" alt="">
+                        <img src="img/mob_ronml_edp-50_d.jpeg" alt="">
                     </div>
                     <div class="text">
                         <p>Rose of No Man's Land is the nickname given by soldiers to the nurses who saved thousands of
@@ -110,7 +110,7 @@
                 <!-- 네번째 베스트셀러 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/packshot_gray_1500x1680_50ml.webp" alt="">
+                        <img src="img/packshot_gray_1500x1680_50ml.webp" alt="">
                     </div>
                     <div class="text">
                         <p>A scent created in celebration of life, De Los Santos incants memories and acknowledges the
@@ -133,7 +133,7 @@
         <div class="inner">
             <h1>BRAND STORY</h1>
             <div>
-                <img src="../img/story1.jpeg" alt="">
+                <img src="img/story1.jpeg" alt="">
                 <h2>BYREDO X MAKE UP</h2>
                 <p>The range encompasses luxurious designer makeup specially created for experimentation and letting
                     your natural beauty and uniqueness shine through. From the multi-use colour stick for luminous skin,
@@ -143,7 +143,7 @@
                 <a href="#">View More</a>
             </div>
             <div>
-                <img src="../img/story1.webp" alt="">
+                <img src="img/story1.webp" alt="">
                 <h2>BYREDO X PERFUME</h2>
                 <p>Byredo’s luxury perfume category offerings transform fresh floral, warm musk, exotic spices, and
                     woody notes into idiosyncratic scent blends that capture emotions and memories, in an
@@ -151,7 +151,7 @@
                 <a href="#">View More</a>
             </div>
             <div>
-                <img src="../img/story3.webp" alt="">
+                <img src="img/story3.webp" alt="">
                 <h2>BYREDO X BODY CARE</h2>
                 <p>Byredo scented body care products impart a delicate fragrance on the skin with our signature beloved
                     scents. The range includes body wash, body lotion, body cream, hair perfume and roll-on perfume oil.
@@ -188,7 +188,7 @@
                 <!-- 첫번째 신상품 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/good_one_mob-tobaccomandarin_1_.webp" alt="">
+                        <img src="img/good_one_mob-tobaccomandarin_1_.webp" alt="">
                     </div>
                     <div class="text">
                         <p>In this evocation of contrasts and intrigue, raw noble ingredients stay true: a sparkling
@@ -206,7 +206,7 @@
                 <!-- 두번째 신상품 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/mob-sellier.webp" alt="">
+                        <img src="img/mob-sellier.webp" alt="">
                     </div>
                     <div class="text">
                         <p>Distinguished, sombre, smoky, Sellier is a truly unbridled concentration of leather. The
@@ -224,7 +224,7 @@
                 <!-- 세번째 신상품 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/packshot-100ml-desktop-version-1500x1680.webp" alt="">
+                        <img src="img/packshot-100ml-desktop-version-1500x1680.webp" alt="">
                     </div>
                     <div class="text">
                         <p>Drawing on the Byredo philosophy of translating fragmented memories and abstract ideas into
@@ -243,7 +243,7 @@
                 <!-- 네번째 신상품 -->
                 <article>
                     <div class="pic">
-                        <img src="../img/byredo-ext-vanille-antique-web-1500x1680.webp" alt="">
+                        <img src="img/byredo-ext-vanille-antique-web-1500x1680.webp" alt="">
                     </div>
                     <div class="text">
                         <p>
@@ -274,11 +274,11 @@
                 <a href="">FIND A SHOP NEAR YOU</a>
             </article>
             <article class="direct_pic">
-                <img src="../img/store.webp" alt="">
+                <img src="img/store.webp" alt="">
             </article>
 
             <article class="direct_pic">
-                <img src="../img/store2.webp" alt="">
+                <img src="img/store2.webp" alt="">
             </article>
             <article>
                 <h1>Direct Shops</h1>
@@ -303,7 +303,7 @@
                 consectetur adipisicing elit. Atque dignissimos optio quae nesciunt, mollitia corporis asperiores
                 doloribus? Incidunt, neque odio. Perferendis porro quia autem quam facere reprehenderit ducimus sequi
                 amet.</p>
-            <img src="../img/text.jpeg" alt="" class="sign">
+            <img src="img/text.jpeg" alt="" class="sign">
         </div>
     </section>
 
@@ -314,31 +314,31 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../img/logo1.jpeg" alt="">
+                        <img src="img/logo1.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo2.jpeg" alt="">
+                        <img src="img/logo2.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo3.jpeg" alt="">
+                        <img src="img/logo3.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo4.jpeg" alt="">
+                        <img src="img/logo4.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo5.jpeg" alt="">
+                        <img src="img/logo5.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/Logo6.jpeg" alt="">
+                        <img src="img/Logo6.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/Logo7.jpeg" alt="">
+                        <img src="img/Logo7.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo8.jpeg" alt="">
+                        <img src="img/logo8.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo9.jpeg" alt="">
+                        <img src="img/logo9.jpeg" alt="">
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
