--- a/sub_index.html
+++ b/sub_index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <script src="../js/main.js"></script>
-    <script src="../js/anime.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/anime.js"></script>
     <script src="https://kit.fontawesome.com/8cb4d71d7e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
