--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="inner">
             <a href="main.html">BYREDO</a>
-            <nav class="menu">
+            <nav class="menuWeb">
                 <ul id="gnb">
                     <li><a href="member.html">WHO WE ARE</a></li>
                     <li><a href="gallery.html">PERFUME</a></li>
@@ -29,9 +29,29 @@
                 </ul>
                 <ul class="util">
                     <li><a href="#">Login</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="join.html">Join</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">English/한</a></li>
+                </ul>
+            </nav>
+
+            <a href="#" class="btnCall">
+                <span>메뉴호출</span>
+            </a> 
+
+
+            <nav class="menuMo">
+                <h1>
+                    <a href="index.html">BYREDO</a>
+                    <a href="join.html">Join</a>
+                    <a href="community.html">Help</a>
+                </h1>
+                <ul id="gnbMo">
+                    <li><a href="member.html">WHO WE ARE</a></li>
+                    <li><a href="gallery.html">PERFUME</a></li>
+                    <li><a href="yotube.html">YOUTUBE</a></li>
+                    <li><a href="community.html">COMMUNITY</a></li>
+                    <li><a href="location.html">LOCATION</a></li>
                 </ul>
 
             </nav>
