--- a/sub_index.html
+++ b/sub_index.html
@@ -34,8 +34,7 @@
                 <ul class="util">
                     <li><a href="#">Login</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">English/한</a></li>
+                    <li><a href="community.html">Help</a></li>
                 </ul>
             </nav>
 
@@ -122,34 +121,37 @@
                 <li>
                     <h1>Customer Service</h1>
                 </li>
-                <li><a href="page/community.html">FAQ</a></li>
-                <li><a href="page/community.html">1:1 Question</a></li>
-                <li><a href="page/community.html">Notice</a></li>
-                <li><a href="page/location.html">Shop</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">1:1 Question</a></li>
+                <li><a href="#">Notice</a></li>
+                <li><a href="#">Shop</a></li>
             </ul>
             <ul>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i> </a></li>
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                <li>
+                    <h1>Followe We</h1>
+                </li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Youtube</a></li>
+                <li><a href="#">Twitter</a></li>
             </ul>
             <div class="contact">
                 <h2>Contact Us</h2>
                 <p>1-800-255-1342</p>
-                <p>Monday to Saturday 9AM to 10PM EST</p>
+                <p>Monday to Saturday 9AM to 10PM EST<br>
+                    TEL : +82-2-2100-2114 FAX : +82-2-2100-7999
+                <address>
+                    Korean Consulate General in Los Angeles 3243 Wilshire Blvd, Los Angeles, CA 90010
+                </address>            
+                <p class="copy">Copyright &copy; 2021 BYREDO_CHOISEUNGCHUL All rights reserved</p>
+                </p>
             </div>
 
-            <address>
-                address: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, dolore.<br />
-                TEL : +82-2-2100-2114 FAX : +82-2-2100-7999
-            </address>
 
-            <p class="copy">Copyright &copy; 2021 ddddddddd Right reserved.</p>
+
         </div>
 
     </footer>
-
     <script>
         var swiper = new Swiper(".mySwiper", {
             slidesPerView: 5,
