--- a/main.html
+++ b/main.html
@@ -8,14 +8,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <script defer src="js/anime.js"></script>
     <script defer src="js/main.js"></script>
-    <script src="js/anime.js"></script>
+
     <script src="https://kit.fontawesome.com/8cb4d71d7e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-
-
-
 </head>
 
 <body>
@@ -34,14 +31,13 @@
                 <ul class="util">
                     <li><a href="#">Login</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">English/한</a></li>
+                    <li><a href="community.html">Help</a></li>
                 </ul>
             </nav>
 
             <a href="#" class="btnCall">
                 <span>메뉴호출</span>
-            </a> 
+            </a>
 
 
             <nav class="menuMo">
@@ -155,28 +151,16 @@
             <div>
                 <img src="img/story1.jpeg" alt="">
                 <h2>BYREDO X MAKE UP</h2>
-                <p>The range encompasses luxurious designer makeup specially created for experimentation and letting
-                    your natural beauty and uniqueness shine through. From the multi-use colour stick for luminous skin,
-                    to nourishing lipsticks for deeply nourished and vibrant lips, to mascara, eyeshadow, and eyeliner
-                    in bold and unique shades and formulas.</p>
-                <i class></i>
                 <a href="#">View More</a>
             </div>
             <div>
                 <img src="img/story1.webp" alt="">
                 <h2>BYREDO X PERFUME</h2>
-                <p>Byredo’s luxury perfume category offerings transform fresh floral, warm musk, exotic spices, and
-                    woody notes into idiosyncratic scent blends that capture emotions and memories, in an
-                    instantly-recognisable minimalist bottle featuring Byredo’s signature magnetic cap.</p>
                 <a href="#">View More</a>
             </div>
             <div>
                 <img src="img/story3.webp" alt="">
                 <h2>BYREDO X BODY CARE</h2>
-                <p>Byredo scented body care products impart a delicate fragrance on the skin with our signature beloved
-                    scents. The range includes body wash, body lotion, body cream, hair perfume and roll-on perfume oil.
-                    Formulated with nourishing, moisturizing ingredients to nourish dry skin and deliver an evocative
-                    fragrance experience.</p>
                 <a href="#">View More</a>
             </div>
         </div>
@@ -389,24 +373,28 @@
                 <li><a href="#">Shop</a></li>
             </ul>
             <ul>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i> </a></li>
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                <li>
+                    <h1>Followe We</h1>
+                </li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Youtube</a></li>
+                <li><a href="#">Twitter</a></li>
             </ul>
             <div class="contact">
                 <h2>Contact Us</h2>
                 <p>1-800-255-1342</p>
-                <p>Monday to Saturday 9AM to 10PM EST</p>
+                <p>Monday to Saturday 9AM to 10PM EST<br>
+                    TEL : +82-2-2100-2114 FAX : +82-2-2100-7999
+                <address>
+                    Korean Consulate General in Los Angeles 3243 Wilshire Blvd, Los Angeles, CA 90010
+                </address>            
+                <p class="copy">Copyright &copy; 2021 BYREDO_CHOISEUNGCHUL All rights reserved</p>
+                </p>
             </div>
 
-            <address>
-                address: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, dolore.<br />
-                TEL : +82-2-2100-2114 FAX : +82-2-2100-7999
-            </address>
 
-            <p class="copy">Copyright &copy; 2021 ddddddddd Right reserved.</p>
+
         </div>
 
     </footer>
