--- a/join.html
+++ b/join.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script defer src="js/join.js"></script>
+    <script defer src="js/main.js"></script>
     <script defer src="js/anime.js"></script>
     <script src="https://kit.fontawesome.com/8cb4d71d7e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
