--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
     </figure>
 
     <!-- 베스트셀러 -->
-    <section id="best">
+    <section id="best" class="on">
         <div class="inner">
             <h1>BEST SELLER</h1>
             <div class="wrap">
