메인/갤러리 수정

--- a/location.html
+++ b/location.html
@@ -24,7 +24,7 @@
     <!-- 헤더 -->
     <header id="header">
         <div class="inner">
-            <a href="main.html">BYREDO</a>
+            <a href="main.html" class="logo">BYREDO</a>
             <nav class="menuWeb">
                 <ul id="gnb">
                     <li><a href="member.html">WHO WE ARE</a></li>
