--- a/member.html
+++ b/member.html
@@ -19,7 +19,7 @@
 <body>
     <header id="header">
         <div class="inner">
-            <a href="main.html">BYREDO</a>
+            <a href="main.html" class="logo">BYREDO</a>
             <nav class="menuWeb">
                 <ul id="gnb">
                     <li><a href="member.html">WHO WE ARE</a></li>
@@ -37,7 +37,7 @@
 
             <a href="#" class="btnCall">
                 <span>메뉴호출</span>
-            </a> 
+            </a>
 
 
             <nav class="menuMo">
@@ -62,8 +62,9 @@
         <div class="inner">
             <h1>BYREDO CREW</h1>
             <div class="byred_text">
+                <h2>BY REDOLENCE = BYREDO</h2>
                 <p>
-                    <span>BY REDOLENCE = BYREDO</span><br>
+                    <br>
                     Each scent of Byredo expresses a scent that is nowhere in the world where you can find a clear
                     identity and reason for existence. Through the pear of carefully selected raw materials, it is
                     expanding the area of fragrance that can be found in daily life, such as body care, hand care, home
@@ -274,7 +275,7 @@
                     TEL : +82-2-2100-2114 FAX : +82-2-2100-7999
                 <address>
                     Korean Consulate General in Los Angeles 3243 Wilshire Blvd, Los Angeles, CA 90010
-                </address>            
+                </address>
                 <p class="copy">Copyright &copy; 2021 BYREDO_CHOISEUNGCHUL All rights reserved</p>
                 </p>
             </div>
