--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
 <body>
     <header id="header">
         <div class="inner">
-            <a href="main.html">BYREDO</a>
+            <a href="main.html" class="logo">BYREDO</a>
             <nav class="menuWeb">
                 <ul id="gnb">
                     <li><a href="member.html">WHO WE ARE</a></li>
