--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                 <img src="img/index/pic0.jpg" alt="">
             </article>
         </main>
-    </a>
 
+        
+    </a>
+<a href="main.html" class="btn_index">www.Byredo.com</a>
 </body>
 
 </html>
