--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
 
             <a href="#" class="btnCall">
                 <span>메뉴호출</span>
-            </a> 
+            </a>
 
 
             <nav class="menuMo">
@@ -63,8 +63,9 @@
     </header>
 
     <section class="content gallery">
+
         <div class="inner">
-            <h2>GALLERY <span>갤러리</span></h2>
+            <h2>Gallery</h2>
             <div id="gallery">
                 <article id="searchBox">
                     <input type="text" id="search" placeholder="검색어 입력창">
@@ -155,7 +156,7 @@
                     TEL : +82-2-2100-2114 FAX : +82-2-2100-7999
                 <address>
                     Korean Consulate General in Los Angeles 3243 Wilshire Blvd, Los Angeles, CA 90010
-                </address>            
+                </address>
                 <p class="copy">Copyright &copy; 2021 BYREDO_CHOISEUNGCHUL All rights reserved</p>
                 </p>
             </div>
@@ -187,5 +188,6 @@
         });
     </script>
 
-    </body>
-    </html>
+</body>
+
+</html>
