--- a/member.html
+++ b/member.html
@@ -62,7 +62,7 @@
         <div class="inner">
             <h1>BYREDO CREW</h1>
             <div class="byred_text">
-                <h2>BY REDOLENCE = BYREDO</h2>
+                <h2 class="byredo_title">BY REDOLENCE = BYREDO</h2>
                 <p>
                     <br>
                     Each scent of Byredo expresses a scent that is nowhere in the world where you can find a clear
@@ -76,7 +76,7 @@
                 <div class="ceo">
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member11.jpeg" alt="">
+                            <img src="img/member/member11.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2> Shawn Wayans</h2>
@@ -88,7 +88,7 @@
                 <div class="Planning">
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member10.jpeg" alt="">
+                            <img src="img/member/member10.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2>Alison Sudol</h2>
@@ -98,7 +98,7 @@
 
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member6.jpeg" alt="">
+                            <img src="img/member/member6.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2>Jessica Williams</h2>
@@ -112,7 +112,7 @@
 
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member1.jpeg" alt="">
+                            <img src="img/member/member1.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2> Jaime King </h2>
@@ -122,7 +122,7 @@
 
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member2.jpeg" alt="">
+                            <img src="img/member/member2.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2> Lochlyn Munro</h2>
@@ -141,7 +141,7 @@
 
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member12.jpeg" alt="">
+                            <img src="img/member/member12.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2> John Heard</h2>
@@ -156,17 +156,17 @@
 
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member4.jpeg" alt="">
+                            <img src="img/member/member4.jpeg" alt="">
                         </div>
                         <article class="member_text">
-                            <h2>Channing Matthew Tatum</h2>
+                            <h2>Channing Matthew</h2>
                             <h3>Marketing Team</h3>
                         </article>
                     </article>
 
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member5.jpeg" alt="">
+                            <img src="img/member/member5.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2> Mella Londa </h2>
@@ -175,7 +175,7 @@
                     </article>
                     <article>
                         <div class="pic">
-                            <img src="../img/member/member7.jpeg" alt="">
+                            <img src="img/member/member7.jpeg" alt="">
                         </div>
                         <article class="member_text">
                             <h2> Dana Fox</h2>
@@ -206,31 +206,31 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../img/logo1.jpeg" alt="">
+                        <img src="img/logo1.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo2.jpeg" alt="">
+                        <img src="img/logo2.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo3.jpeg" alt="">
+                        <img src="img/logo3.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo4.jpeg" alt="">
+                        <img src="img/logo4.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo5.jpeg" alt="">
+                        <img src="img/logo5.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/Logo6.jpeg" alt="">
+                        <img src="img/Logo6.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/Logo7.jpeg" alt="">
+                        <img src="img/Logo7.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo8.jpeg" alt="">
+                        <img src="img/logo8.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo9.jpeg" alt="">
+                        <img src="img/logo9.jpeg" alt="">
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
