--- a/yotube.html
+++ b/yotube.html
@@ -77,31 +77,31 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../img/logo1.jpeg" alt="">
+                        <img src="img/logo1.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo2.jpeg" alt="">
+                        <img src="img/logo2.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo3.jpeg" alt="">
+                        <img src="img/logo3.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo4.jpeg" alt="">
+                        <img src="img/logo4.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo5.jpeg" alt="">
+                        <img src="img/logo5.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/Logo6.jpeg" alt="">
+                        <img src="img/Logo6.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/Logo7.jpeg" alt="">
+                        <img src="img/Logo7.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo8.jpeg" alt="">
+                        <img src="img/logo8.jpeg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/logo9.jpeg" alt="">
+                        <img src="img/logo9.jpeg" alt="">
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
